src/antlr/chatParser.js
"use strict";
// Generated from ./antlr/chatParser.g4 by ANTLR 4.9.0-SNAPSHOT
Object.defineProperty(exports, "__esModule", { value: true });
exports.SpContext = exports.WordsContext = exports.SsplContext = exports.ClnspContext = exports.S_and_wContext = exports.LinesContext = exports.AnchorContext = exports.DollaransContext = exports.Atdef_Context = exports.AtdefContext = exports.IsinfoonlyContext = exports.IstrackedContext = exports.Progress_pointsContext = exports.Bool_labelContext = exports.TitleContext = exports.HintContext = exports.InstructionContext = exports.Dateprop_chainedContext = exports.DatepropContext = exports.ProgressContext = exports.ReferenceContext = exports.Bracketed_textContext = exports.ExampleContext = exports.AnglerefContext = exports.LeadContext = exports.ItemContext = exports.UrlContext = exports.TelephoneContext = exports.Resource_chainedContext = exports.Op_audio_formatContext = exports.Audio_formatContext = exports.Audio_oneContext = exports.AudiobitContext = exports.Image_chained4matchContext = exports.Image_chainedContext = exports.Op_image_formatContext = exports.Image_oneContext = exports.ImagebitContext = exports.Video_oneContext = exports.VideobitContext = exports.Stillimg_oneContext = exports.StillimagefilmbitContext = exports.AppbitContext = exports.WebsitebitContext = exports.DocumentbitContext = exports.ArticlebitContext = exports.Op_stillimagefilm_formatContext = exports.Op_video_formatContext = exports.Op_website_formatContext = exports.Op_app_formatContext = exports.Op_document_formatContext = exports.Op_article_formatContext = exports.Stillimagefilm_formatContext = exports.Website_formatContext = exports.App_formatContext = exports.Document_formatContext = exports.Article_formatContext = exports.Video_formatContext = exports.Image_formatContext = exports.Format2Context = exports.Resource_format_extraContext = exports.Resource_formatContext = exports.FormatContext = exports.AtpointContext = exports.DcolonContext = exports.Single_gapContext = exports.GapContext = exports.ResourceContext = exports.BitElemContext = exports.Sspl_chat_partnerContext = exports.Chat_partnerContext = exports.Chat_initiatorContext = exports.Name_altContext = exports.Name_textContext = exports.Partner1_nameContext = exports.Partner1Context = exports.PartnerContext = exports.InitiatorContext = exports.Conversation_left_1_screamContext = exports.Conversation_left_1_thoughtContext = exports.Conversation_right_1_screamContext = exports.Conversation_right_1_thoughtContext = exports.Conversation_right_1Context = exports.Conversation_left_1Context = exports.ConversationContext = exports.ChatContext = exports.Bitmark_Context = exports.BitmarkContext = exports.chatParser = void 0;
const ATN_1 = require("antlr4ts/atn/ATN");
const ATNDeserializer_1 = require("antlr4ts/atn/ATNDeserializer");
const FailedPredicateException_1 = require("antlr4ts/FailedPredicateException");
const NoViableAltException_1 = require("antlr4ts/NoViableAltException");
const Parser_1 = require("antlr4ts/Parser");
const ParserRuleContext_1 = require("antlr4ts/ParserRuleContext");
const ParserATNSimulator_1 = require("antlr4ts/atn/ParserATNSimulator");
const RecognitionException_1 = require("antlr4ts/RecognitionException");
const Token_1 = require("antlr4ts/Token");
const VocabularyImpl_1 = require("antlr4ts/VocabularyImpl");
const Utils = require("antlr4ts/misc/Utils");
class chatParser extends Parser_1.Parser {
    constructor(input) {
        super(input);
        this._interp = new ParserATNSimulator_1.ParserATNSimulator(chatParser._ATN, this);
    }
    // @Override
    // @NotNull
    get vocabulary() {
        return chatParser.VOCABULARY;
    }
    // tslint:enable:no-trailing-whitespace
    // @Override
    get grammarFileName() { return "chatParser.g4"; }
    // @Override
    get ruleNames() { return chatParser.ruleNames; }
    // @Override
    get serializedATN() { return chatParser._serializedATN; }
    createFailedPredicateException(predicate, message) {
        return new FailedPredicateException_1.FailedPredicateException(this, predicate, message);
    }
    // @RuleVersion(0)
    bitmark() {
        let _localctx = new BitmarkContext(this._ctx, this.state);
        this.enterRule(_localctx, 0, chatParser.RULE_bitmark);
        let _la;
        try {
            let _alt;
            this.enterOuterAlt(_localctx, 1);
            {
                this.state = 189;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                do {
                    {
                        {
                            this.state = 176;
                            this.bitmark_();
                            this.state = 186;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
                            while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                if (_alt === 1) {
                                    {
                                        {
                                            this.state = 180;
                                            this._errHandler.sync(this);
                                            _la = this._input.LA(1);
                                            while (_la === chatParser.S) {
                                                {
                                                    {
                                                        this.state = 177;
                                                        this.match(chatParser.S);
                                                    }
                                                }
                                                this.state = 182;
                                                this._errHandler.sync(this);
                                                _la = this._input.LA(1);
                                            }
                                            this.state = 183;
                                            this.match(chatParser.NL);
                                        }
                                    }
                                }
                                this.state = 188;
                                this._errHandler.sync(this);
                                _alt = this.interpreter.adaptivePredict(this._input, 1, this._ctx);
                            }
                        }
                    }
                    this.state = 191;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << chatParser.BitChat) | (1 << chatParser.BitConv) | (1 << chatParser.BitConversationLeft1) | (1 << chatParser.BitConversationRight1) | (1 << chatParser.BitConversationRight1Thought) | (1 << chatParser.BitConversationRight1Scream) | (1 << chatParser.BitConversationLeft1Thought) | (1 << chatParser.BitConversationLeft1Scream))) !== 0));
                this.state = 196;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while (_la === chatParser.NL) {
                    {
                        {
                            this.state = 193;
                            this.match(chatParser.NL);
                        }
                    }
                    this.state = 198;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 199;
                this.match(chatParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    bitmark_() {
        let _localctx = new Bitmark_Context(this._ctx, this.state);
        this.enterRule(_localctx, 2, chatParser.RULE_bitmark_);
        try {
            this.state = 209;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
                case chatParser.BitChat:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 201;
                        this.chat();
                    }
                    break;
                case chatParser.BitConv:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 202;
                        this.conversation();
                    }
                    break;
                case chatParser.BitConversationLeft1:
                    this.enterOuterAlt(_localctx, 3);
                    {
                        this.state = 203;
                        this.conversation_left_1();
                    }
                    break;
                case chatParser.BitConversationRight1:
                    this.enterOuterAlt(_localctx, 4);
                    {
                        this.state = 204;
                        this.conversation_right_1();
                    }
                    break;
                case chatParser.BitConversationRight1Thought:
                    this.enterOuterAlt(_localctx, 5);
                    {
                        this.state = 205;
                        this.conversation_right_1_thought();
                    }
                    break;
                case chatParser.BitConversationRight1Scream:
                    this.enterOuterAlt(_localctx, 6);
                    {
                        this.state = 206;
                        this.conversation_right_1_scream();
                    }
                    break;
                case chatParser.BitConversationLeft1Thought:
                    this.enterOuterAlt(_localctx, 7);
                    {
                        this.state = 207;
                        this.conversation_left_1_thought();
                    }
                    break;
                case chatParser.BitConversationLeft1Scream:
                    this.enterOuterAlt(_localctx, 8);
                    {
                        this.state = 208;
                        this.conversation_left_1_scream();
                    }
                    break;
                default:
                    throw new NoViableAltException_1.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    chat() {
        let _localctx = new ChatContext(this._ctx, this.state);
        this.enterRule(_localctx, 4, chatParser.RULE_chat);
        let _la;
        try {
            let _alt;
            this.state = 291;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 17, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 211;
                        this.match(chatParser.BitChat);
                        this.state = 212;
                        this.format();
                        this.state = 213;
                        this.match(chatParser.CL);
                        this.state = 217;
                        this._errHandler.sync(this);
                        _alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
                        while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                            if (_alt === 1) {
                                {
                                    {
                                        this.state = 214;
                                        this.match(chatParser.NL);
                                    }
                                }
                            }
                            this.state = 219;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 5, this._ctx);
                        }
                        this.state = 229;
                        this._errHandler.sync(this);
                        _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                        while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                            if (_alt === 1) {
                                {
                                    {
                                        this.state = 220;
                                        this.bitElem();
                                        this.state = 224;
                                        this._errHandler.sync(this);
                                        _alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
                                        while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                            if (_alt === 1) {
                                                {
                                                    {
                                                        this.state = 221;
                                                        this.match(chatParser.NL);
                                                    }
                                                }
                                            }
                                            this.state = 226;
                                            this._errHandler.sync(this);
                                            _alt = this.interpreter.adaptivePredict(this._input, 6, this._ctx);
                                        }
                                    }
                                }
                            }
                            this.state = 231;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 7, this._ctx);
                        }
                    }
                    break;
                case 2:
                    this.enterOuterAlt(_localctx, 2);
                    {
                        this.state = 232;
                        this.match(chatParser.BitChat);
                        this.state = 233;
                        this.format();
                        this.state = 234;
                        this.match(chatParser.CL);
                        this.state = 238;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while (_la === chatParser.NL) {
                            {
                                {
                                    this.state = 235;
                                    this.match(chatParser.NL);
                                }
                            }
                            this.state = 240;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 250;
                        this._errHandler.sync(this);
                        _la = this._input.LA(1);
                        while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << chatParser.S) | (1 << chatParser.OPRANGLES) | (1 << chatParser.OPRANGLEL) | (1 << chatParser.OPDANGLE) | (1 << chatParser.OPU) | (1 << chatParser.OPB) | (1 << chatParser.OPQ) | (1 << chatParser.OPA) | (1 << chatParser.OPS) | (1 << chatParser.OPC) | (1 << chatParser.OPITEM) | (1 << chatParser.OPHASH))) !== 0) || ((((_la - 32)) & ~0x1F) === 0 && ((1 << (_la - 32)) & ((1 << (chatParser.COLON - 32)) | (1 << (chatParser.AMP - 32)) | (1 << (chatParser.DBLCOLON - 32)) | (1 << (chatParser.Greater - 32)) | (1 << (chatParser.Less - 32)) | (1 << (chatParser.RightAngle - 32)) | (1 << (chatParser.RightArrow - 32)) | (1 << (chatParser.DBLEQ - 32)) | (1 << (chatParser.ArticleText - 32)) | (1 << (chatParser.NUMERIC - 32)) | (1 << (chatParser.STRING - 32)) | (1 << (chatParser.NOTBITMARK - 32)) | (1 << (chatParser.ELIPSIS - 32)) | (1 << (chatParser.SENTENCE - 32)) | (1 << (chatParser.BARSTRING - 32)) | (1 << (chatParser.AtReference - 32)))) !== 0) || ((((_la - 68)) & ~0x1F) === 0 && ((1 << (_la - 68)) & ((1 << (chatParser.AtExampleWithStr - 68)) | (1 << (chatParser.AtExamplecol - 68)) | (1 << (chatParser.AtExamplecl - 68)) | (1 << (chatParser.AtSampleSolution - 68)) | (1 << (chatParser.AtLabeltrue - 68)) | (1 << (chatParser.AtLabelfalse - 68)) | (1 << (chatParser.OpAtCopyright - 68)))) !== 0) || ((((_la - 101)) & ~0x1F) === 0 && ((1 << (_la - 101)) & ((1 << (chatParser.OpAmpAudio - 101)) | (1 << (chatParser.OpAmpImage - 101)) | (1 << (chatParser.OpAmpImageZoom - 101)) | (1 << (chatParser.OpAmpVideo - 101)) | (1 << (chatParser.OpAmpArticle - 101)) | (1 << (chatParser.OpAmpDocument - 101)) | (1 << (chatParser.OpAmpApp - 101)) | (1 << (chatParser.OpAmpWebsite - 101)) | (1 << (chatParser.OpAmpStillImageFilm - 101)) | (1 << (chatParser.OpAmpAudioLink - 101)) | (1 << (chatParser.OpAmpImageLink - 101)) | (1 << (chatParser.OpAmpVideoLink - 101)) | (1 << (chatParser.OpAmpArticleLink - 101)) | (1 << (chatParser.OpAmpDocumentLink - 101)) | (1 << (chatParser.OpAmpDocumentDownload - 101)) | (1 << (chatParser.OpAmpAppLink - 101)) | (1 << (chatParser.OpAmpWebsiteLink - 101)) | (1 << (chatParser.OpAmpStillImageFilmLink - 101)))) !== 0) || ((((_la - 136)) & ~0x1F) === 0 && ((1 << (_la - 136)) & ((1 << (chatParser.OpAmpVideoEmbed - 136)) | (1 << (chatParser.OpAmpAudioEmbed - 136)) | (1 << (chatParser.OpAmpDocumentEmbed - 136)) | (1 << (chatParser.OpAmpStillImageFilmEmbed - 136)) | (1 << (chatParser.URL - 136)) | (1 << (chatParser.LIST_LINE - 136)))) !== 0)) {
                            {
                                {
                                    this.state = 241;
                                    this.bitElem();
                                    this.state = 245;
                                    this._errHandler.sync(this);
                                    _la = this._input.LA(1);
                                    while (_la === chatParser.NL) {
                                        {
                                            {
                                                this.state = 242;
                                                this.match(chatParser.NL);
                                            }
                                        }
                                        this.state = 247;
                                        this._errHandler.sync(this);
                                        _la = this._input.LA(1);
                                    }
                                }
                            }
                            this.state = 252;
                            this._errHandler.sync(this);
                            _la = this._input.LA(1);
                        }
                        this.state = 253;
                        _la = this._input.LA(1);
                        if (!(_la === chatParser.HSPL || _la === chatParser.HSPL2)) {
                            this._errHandler.recoverInline(this);
                        }
                        else {
                            if (this._input.LA(1) === Token_1.Token.EOF) {
                                this.matchedEOF = true;
                            }
                            this._errHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 254;
                        this.initiator();
                        this.state = 255;
                        _la = this._input.LA(1);
                        if (!(_la === chatParser.HSPL || _la === chatParser.HSPL2)) {
                            this._errHandler.recoverInline(this);
                        }
                        else {
                            if (this._input.LA(1) === Token_1.Token.EOF) {
                                this.matchedEOF = true;
                            }
                            this._errHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 256;
                        this.partner();
                        this.state = 265;
                        this._errHandler.sync(this);
                        _alt = 1;
                        do {
                            switch (_alt) {
                                case 1:
                                    {
                                        {
                                            this.state = 257;
                                            _la = this._input.LA(1);
                                            if (!(_la === chatParser.HSPL || _la === chatParser.HSPL2)) {
                                                this._errHandler.recoverInline(this);
                                            }
                                            else {
                                                if (this._input.LA(1) === Token_1.Token.EOF) {
                                                    this.matchedEOF = true;
                                                }
                                                this._errHandler.reportMatch(this);
                                                this.consume();
                                            }
                                            this.state = 258;
                                            this.chat_initiator();
                                            this.state = 262;
                                            this._errHandler.sync(this);
                                            _la = this._input.LA(1);
                                            while (_la === chatParser.SSPL || _la === chatParser.SSPL2) {
                                                {
                                                    {
                                                        this.state = 259;
                                                        this.sspl_chat_partner();
                                                    }
                                                }
                                                this.state = 264;
                                                this._errHandler.sync(this);
                                                _la = this._input.LA(1);
                                            }
                                        }
                                    }
                                    break;
                                default:
                                    throw new NoViableAltException_1.NoViableAltException(this);
                            }
                            this.state = 267;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 12, this._ctx);
                        } while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER);
                        this.state = 269;
                        _la = this._input.LA(1);
                        if (!(_la === chatParser.HSPL || _la === chatParser.HSPL2)) {
                            this._errHandler.recoverInline(this);
                        }
                        else {
                            if (this._input.LA(1) === Token_1.Token.EOF) {
                                this.matchedEOF = true;
                            }
                            this._errHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 273;
                        this._errHandler.sync(this);
                        _alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
                        while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                            if (_alt === 1) {
                                {
                                    {
                                        this.state = 270;
                                        this.match(chatParser.NL);
                                    }
                                }
                            }
                            this.state = 275;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 13, this._ctx);
                        }
                        this.state = 289;
                        this._errHandler.sync(this);
                        switch (this.interpreter.adaptivePredict(this._input, 16, this._ctx)) {
                            case 1:
                                {
                                    this.state = 276;
                                    this.resource();
                                    this.state = 286;
                                    this._errHandler.sync(this);
                                    _alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
                                    while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                                        if (_alt === 1) {
                                            {
                                                {
                                                    this.state = 280;
                                                    this._errHandler.sync(this);
                                                    _la = this._input.LA(1);
                                                    while (_la === chatParser.NL) {
                                                        {
                                                            {
                                                                this.state = 277;
                                                                this.match(chatParser.NL);
                                                            }
                                                        }
                                                        this.state = 282;
                                                        this._errHandler.sync(this);
                                                        _la = this._input.LA(1);
                                                    }
                                                    this.state = 283;
                                                    this.resource();
                                                }
                                            }
                                        }
                                        this.state = 288;
                                        this._errHandler.sync(this);
                                        _alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
                                    }
                                }
                                break;
                        }
                    }
                    break;
            }
        }
        catch (re) {
            if (re instanceof RecognitionException_1.RecognitionException) {
                _localctx.exception = re;
                this._errHandler.reportError(this, re);
                this._errHandler.recover(this, re);
            }
            else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return _localctx;
    }
    // @RuleVersion(0)
    conversation() {
        let _localctx = new ConversationContext(this._ctx, this.state);
        this.enterRule(_localctx, 6, chatParser.RULE_conversation);
        let _la;
        try {
            let _alt;
            this.state = 373;
            this._errHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this._input, 30, this._ctx)) {
                case 1:
                    this.enterOuterAlt(_localctx, 1);
                    {
                        this.state = 293;
                        this.match(chatParser.BitConv);
                        this.state = 294;
                        this.format();
                        this.state = 295;
                        this.match(chatParser.CL);
                        this.state = 299;
                        this._errHandler.sync(this);
                        _alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
                        while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                            if (_alt === 1) {
                                {
                                    {
                                        this.state = 296;
                                        this.match(chatParser.NL);
                                    }
                                }
                            }
                            this.state = 301;
                            this._errHandler.sync(this);
                            _alt = this.interpreter.adaptivePredict(this._input, 18, this._ctx);
                        }
                        this.state = 311;
                        this._errHandler.sync(this);
                        _alt = this.interpreter.adaptivePredict(this._input, 20, this._ctx);
                        while (_alt !== 2 && _alt !== ATN_1.ATN.INVALID_ALT_NUMBER) {
                            if (_alt === 1) {
                                {
                                    {
